--- a/Single price grid component/style.css
+++ b/Single price grid component/style.css
@@ -6,7 +6,7 @@
 
 /*hide footer info*/
 #footer {
-    display: none;
+  display: none;
 }
 
 .priceCard {
@@ -15,14 +15,21 @@
   overflow: hidden;
   font-size: 16px;
   font-family: "Karla", sans-serif;
+  box-shadow: 5px 10px 5px 12px hsl(218, 22%, 98%);
+  /*Centering card vertically and horizontally*/
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /*Top space */
-.header { 
+.header {
   grid-area: header;
   background-color: white;
   padding: 25px 40px 25px 40px;
-  }
+}
 
 /*Bottom left space */
 .left {
@@ -36,17 +43,17 @@
 .right {
   grid-area: right;
   background-color: hsl(179, 46%, 51%);
-  padding: 40px;  
+  padding: 40px;
   color: hsl(204, 43%, 93%);
 }
 
 .grid-container {
   display: grid;
-  grid: 
+  grid:
     'header header'
     'left right';
   grid-auto-columns: 1fr;
-  grid-auto-flow: column; 
+  grid-auto-flow: column;
   overflow: hidden;
   margin: 0;
 }
@@ -55,10 +62,10 @@
 @media (max-width: 375px) {
   .grid-container {
     display: grid;
-    grid: 
-    'header'
-    'left'
-    'right';
+    grid:
+      'header'
+      'left'
+      'right';
     max-width: 375px
   }
 }
@@ -75,7 +82,7 @@
   color: hsl(71, 73%, 54%);
   padding: 0;
   margin: 0;
-  }
+}
 
 /*Text in top section */
 .paragraph {
@@ -83,7 +90,7 @@
   line-height: 1.6;
   padding: 0;
   margin: 10px 0 10px 0;
- }
+}
 
 /*Price in second section */
 span b {
@@ -104,9 +111,10 @@ span {
 
 ul.no-bullets {
   color: hsl(177, 76%, 77%);
-  list-style-type: none; /* Remove bullets */
-  padding: 20px 0 0 0; 
-  margin: 0; 
+  list-style-type: none;
+  /* Remove bullets */
+  padding: 20px 0 0 0;
+  margin: 0;
   font-size: 14px;
   line-height: 1.6;
 }
@@ -121,8 +129,8 @@ button {
   border-radius: 5px;
   font-size: 16px;
   font-weight: 700;
-  }
+}
 
-  button:hover {
-    cursor: pointer;
-  }
+button:hover {
+  cursor: pointer;
+}
